// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authenticated renders error if fetching profile fails 1`] = `
<DocumentFragment>
  <div
    data-testid="error"
  >
    <h1
      data-testid="error-title"
    />
    <pre
      data-testid="error-stack"
    >
      <h2 />
      <pre>
        Error: 
    at Object.&lt;anonymous&gt; (/Users/arnehassel/Projects/dnd5e-app/components/authenticated/index.test.tsx:31:49)
    at Object.asyncJestTest (/Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/jasmineAsyncInstall.js:106:37)
    at /Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/queueRunner.js:45:12
    at new Promise (&lt;anonymous&gt;)
    at mapper (/Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/queueRunner.js:28:19)
    at /Users/arnehassel/Projects/dnd5e-app/node_modules/jest-jasmine2/build/queueRunner.js:75:41
    at processTicksAndRejections (internal/process/task_queues.js:85:5)
      </pre>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`Authenticated renders info about the user and a log out button 1`] = `
<DocumentFragment>
  <p />
  <div
    role="button"
    tabindex="0"
  >
    <button
      type="button"
    />
  </div>
</DocumentFragment>
`;

exports[`Authenticated renders loading while fetching profile 1`] = `
<DocumentFragment>
  <div
    data-testid="loading"
  >
    Loading...
  </div>
</DocumentFragment>
`;
